--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"puppeteer": "^9.0.0",
 		"puppeteer-cluster": "^0.22.0",
+		"puppeteer-extra": "^3.1.18",
+		"puppeteer-extra-plugin-stealth": "^2.7.8",
 		"user-agents": "^1.0.643"
 	}
 }
