--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "jfabro3124@gmail.com",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"express": "^4.17.1",
 		"puppeteer": "^9.0.0",
 		"puppeteer-cluster": "^0.22.0",
