--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node index.js"
+		"start": "node ./api/index.js"
 	},
 	"author": "jfabro3124@gmail.com",
 	"license": "ISC",
@@ -15,5 +15,8 @@
 		"puppeteer-extra": "^3.1.18",
 		"puppeteer-extra-plugin-stealth": "^2.7.8",
 		"user-agents": "^1.0.643"
+	},
+	"devDependencies": {
+		"@vercel/node": "^1.10.0"
 	}
 }
