--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "A RESTful API that scrapes manga websites to get you updates for queried series",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node ./api/index.js"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "jfabro3124@gmail.com",
 	"license": "ISC",
@@ -18,5 +17,8 @@
 	},
 	"devDependencies": {
 		"@vercel/node": "^1.10.0"
+	},
+	"pkg": {
+		"assets": "node_modules/puppeteer-extra-plugin-stealth/**/*.*"
 	}
 }
