--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
 	"headers": [
 		{
-			"source": "/api/(.*)",
+			"source": "/(.*)",
 			"headers": [
 				{ "key": "Access-Control-Allow-Credentials", "value": "true" },
 				{ "key": "Access-Control-Allow-Origin", "value": "*" },
@@ -21,5 +21,5 @@
 		{ "source": "/direct", "destination": "/api/direct.js" },
 		{ "source": "/api/(.*)", "destination": "/api/index.js" }
 	],
-	"redirects": [{ "source": "/", "destination": "/manga" }]
+	"redirects": [{ "source": "/", "destination": "/direct" }]
 }
