--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
 				{ "key": "Access-Control-Allow-Origin", "value": "*" },
 				{
 					"key": "Access-Control-Allow-Methods",
-					"value": "GET"
+					"value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
 				},
 				{
 					"key": "Access-Control-Allow-Headers",
@@ -16,10 +16,10 @@
 			]
 		}
 	],
+	"redirects": [{ "source": "/", "destination": "/direct" }],
 	"rewrites": [
 		{ "source": "/manga", "destination": "/api/index.js" },
 		{ "source": "/direct", "destination": "/api/direct.js" },
 		{ "source": "/api/(.*)", "destination": "/api/index.js" }
-	],
-	"redirects": [{ "source": "/", "destination": "/direct" }]
+	]
 }
