--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,6 @@
 	"rewrites": [
 		{ "source": "/manga", "destination": "/api/index.js" },
 		{ "source": "/direct", "destination": "/api/direct.js" },
-		{ "source": "/api/(.*)", "destination": "/api/index.js" }
+		{ "source": "/(.*)", "destination": "/api/404.js" }
 	]
 }
